# momentum_trading

./: .gitignore  main.py  pyproject.toml
app/: config.py  data_fetcher.py  database.py  main.py  portfolio.py  scheduler.py  strategy.py  trading_db.json  utils.py
app/streamlit_app/: charts.py  holdings.py  metrics.py  sidebar.py  styles.py  ticker_analysis.py
